--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg: #85586f;
+  --color-bg-variant: #ac7d88;
+  --color-primary: #deb6ab;
+  --color-primary-variant: #b07b6c;
+  --color-white: #fff;
+  --color-light: #f8ecd1;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 86%;
+}
+
+html {
+  scroll-behavior: smooth;
 }
