--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,8 @@
 .container.contact__container {
-  width: 58%;
+  width: 60%;
   display: grid;
-  grid-template-columns: 30% 58%;
-  gap: 12%;
+  grid-template-columns: 32% 60%;
+  gap: 8%;
 }
 
 .contact__options {
@@ -13,11 +13,12 @@
 
 .contact__option {
   background: var(--color-bg-variant);
-  padding: 1.2rem;
+  padding: 1rem;
   border-radius: 1.2rem;
   text-align: center;
   border: 1px solid transparent;
   transition: var(--transition);
+  margin: 1rem;
 }
 
 .contact__option:hover {
@@ -32,7 +33,7 @@
 
 .contact__option a {
   margin-top: 0.7rem;
-  display: inline-block;
+  display: inline;
   font-size: 0.8rem;
 }
 
