--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,7 +41,7 @@ header {
 /*  ******************** ME **************************** */
 
 .me {
-  background: var(--color-primary);
+  /* background: var(--color-primary); */
   width: 16rem;
   height: 20rem;
   position: absolute;
@@ -49,7 +49,7 @@ header {
   margin-top: 2rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
-  padding: 2rem 1.5rem 1.5rem 1.5rem;
+  /* padding: 2rem 1.5rem 1.5rem 1.5rem; */
 }
 
 /* **************************SCROLL DOWN ************************ */
@@ -75,7 +75,7 @@ header {
 
 @media screen and (max-width: 600px) {
   header {
-    height: 100vh;
+    height: 60vh;
   }
 
   .header__socials,
