--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -35,6 +35,7 @@ footer a {
 .footer__socials a {
   background: var(--color-bg);
   color: var(--color-white);
+  margin: 1rem;
   padding: 0.8rem;
   border-radius: 0.7rem;
   display: flex;
