--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,10 @@ img {
   section {
     margin-top: 6rem;
   }
+
+  .btn {
+    margin: 0.5rem;
+  }
 }
 
 /* ********************** MEDIA QUERIES (SMALL DEVICES) ******************* */
@@ -136,5 +140,9 @@ img {
 
   section {
     margin-bottom: 2rem;
+  }
+
+  .btn {
+    margin: 0.5rem;
   }
 }
